# django-template

./: .gitignore  bun.lockb  justfile  package-lock.json  package.json  pyproject.toml  tailwind.config.js
config/: settings.py  urls.py
static/: tailwind.css
static/css/: style.css
templates/: base.html  welcome.html
