[project]
name = "django-template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.4",
    "django-browser-reload>=1.17.0",
    "django-htmx>=1.21.0",
    "django-stubs>=5.1.1",
    "django-template-partials>=24.4",
    "environs[django]>=14.0.0",
    "whitenoise>=6.8.2",
]

[tool.djlint]
profile = "django"
custom_blocks = "partialdef"
